test/quantumClassicalSubtyping.slq

def main()â‡’H(0:ğ”¹):!ğ”¹; // error
